# tunnel_manager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  config.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
packaging/: README.md
packaging/launchd/: com.tunnel-manager.plist
packaging/systemd/: tunnel-manager.service
packaging/windows/: install-service.ps1
tests/: _mocks.py  conftest.py  test_aggregator.py  test_app.py  test_cli.py  test_config.py  test_fetcher.py  test_parser.py  test_platform_backends.py  test_state.py  test_windows_backend.py
tunnel_manager/: __init__.py  aggregator.py  app.py  cli.py  config.py  fetcher.py  log.py  parser.py  paths.py  state.py  tui.py  tunnel_list.txt
tunnel_manager/backends/: __init__.py  base.py  linux.py  macos.py  windows.py
